--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
+    "handlebars-paginate": "^0.1.0",
     "mysql2": "^1.3.6",
     "passport": "^0.4.0",
     "sequelize": "^4.3.1"
