--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.15.2",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.14.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "handlebars-paginate": "^0.1.0",
     "mysql2": "^1.3.6",
+    "nodemon": "^1.17.5",
+    "npm": "^6.1.0",
     "passport": "^0.3.2",
+    "passport-google-oauth": "^1.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^4.3.1"
   },
