--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "handlebars-paginate": "^0.1.0",
+    "mysql": "^2.15.0",
     "mysql2": "^1.3.6",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
